prep for java 9, cleanup deprecation warnings